--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "newedenfaces",
-  "description": "Character voting app for EVE Online",
+  "name": "LockrHub",
+  "description": "Capstone Site For LockrHub",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sahat/newedenfaces-react"
+    "url": "https://github.com/seanscal/Capstone_Site"
   },
   "main": "server.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "alt": "^0.17.8",
     "async": "^1.5.0",
+    "bower": "^1.6.5",
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
