--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
+    "vinyl-source-stream": "^1.1.0",
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
