--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "dependencies": {
     "alt": "^0.17.8",
     "async": "^1.5.0",
+    "babel-loader": "^6.1.0",
+    "babel-core": "^6.1.19",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babelify": "^7.2.0",
     "bower": "^1.6.5",
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
@@ -45,6 +50,7 @@
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.0",
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
