--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "postinstall": "bower install && gulp build"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "dependencies": {
     "alt": "^0.17.8",
     "async": "^1.5.0",
-    "babel-loader": "^6.1.0",
     "babel-core": "^6.1.19",
+    "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
-    "bower": "^1.6.5",
     "body-parser": "^1.14.1",
+    "bower": "^1.6.5",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
     "express": "^4.13.3",
@@ -39,6 +42,7 @@
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "history": "^1.13.0",
+    "kerberos": "0.0.18",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
     "react": "^0.14.2",
@@ -51,6 +55,7 @@
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.0",
+    "webpack": "^1.12.14",
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
