--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
     "request": "^2.65.0",
+    "restler": "^3.4.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
